--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@ header {
 	left:0;
 	right:0;
 
-	height: 40px;
+	height: 30px;
 	z-index: 100;
 
 	background-color: #282b2c;
@@ -29,30 +29,6 @@ header {
 	color: #fff;
 	box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
-
-header a {
-	color: #ffffff;
-	text-decoration: none;
-}
-
-header h2.tzine{
-	float: right;
-	opacity:0.9;
-}
-
-header h2.tzine:hover{
-	opacity:1;
-}
-
-header h2.tzine a{
-	font-size: 13px;
-	text-transform: uppercase;
-	display: inline-block;
-	padding: 12px 18px;
-	border-radius: 3px;
-	background-color: #5895DB;
-}
-
 
 @media (max-width: 500px){
 
@@ -75,8 +51,8 @@ header h2.tzine a{
 .main-content{
 	box-sizing: border-box;
 	text-align: center;
-	margin: 125px auto 60px;
-	padding: 0 40px;
+	margin: 85px auto 60px;
+	padding: 0 10px;
 }
 
 .main-content h3{
@@ -103,8 +79,8 @@ header h2.tzine a{
 
 .filters{
 	box-sizing: border-box;
-	padding: 5px 30px 30px;
-	width: 190px;
+	padding: 5px 10px 10px;
+	width: 270px;
 	background-color: #FFF;
 	border: 1px solid #DBE3E7;
 	border-radius: 3px;
@@ -126,7 +102,7 @@ header h2.tzine a{
 	display: block;
 	margin-bottom: 12px;
 	font-weight: bold;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 
 .filters label{
@@ -348,9 +324,9 @@ header h2.tzine a{
 	width: 760px;
 	height: 550px;
 	position: fixed;
-	left: 50%;
+	left: 25%;
 	margin-left: -375px;
-	top: 50%;
+	top: 25%;
 	margin-top: -275px;
 	pointer-events: none;
 
@@ -374,8 +350,8 @@ header h2.tzine a{
 }
 
 .preview-large img{
-	width: 100%;
-	height: 280px;
+	width: auto;
+	height: 130px;
 	border-bottom: 3px solid #efefef;
 	border-radius: 5px 5px 0 0;
 }
