--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,6 +30,12 @@ header {
 	box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
+header button{
+    position:absolute;
+    top:20px;
+    right:10px;
+}
+
 @media (max-width: 500px){
 
 	header {
